--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <option value="chinois">Chinois</option>
                 </select>
                 
-                <input type="text" id="code-input" placeholder="Ex: 54df5df4df-df84d1f4df-df1dfdf56df5" required>
+                <input type="text" id="code-input" placeholder="Veuillez insérer votre clé API OpenAI." required>
                 <input type="file" name="fichier" id="fichier">
                 <input type="submit" value="Upload">
             </form>
