--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <h2>Bienvenue !</h2>
             <form id="upload-form">
                 <select id="language-select">
-                    <option value="francais">Français</option>
-                    <option value="anglais">Anglais</option>
-                    <option value="espagnol">Espagnol</option>
-                    <option value="allemand">Allemand</option>
-                    <option value="italien">Italien</option>
-                    <option value="portugais">Portugais</option>
-                    <option value="russe">Russe</option>
-                    <option value="chinois">Chinois</option>
+                    <option value="French">Français</option>
+                    <option value="English">Anglais</option>
+                    <option value="Spanish">Espagnol</option>
+                    <option value="German">Allemand</option>
+                    <option value="Italian">Italien</option>
+                    <option value="Portuguese">Portugais</option>
+                    <option value="Russian">Russe</option>
+                    <option value="Chinese">Chinois</option>
                 </select>
                 
                 <input type="text" id="code-input" placeholder="Veuillez insérer votre clé API OpenAI." required>
