change copyright author

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <footer class="py-4 px-6 bg-blue-900 text-white">
-      <div class="text-center font-semibold">&copy; 2023 Yaml Translator. Tous droits réservés</div>
+      <div class="text-center font-semibold">&copy; 2023 Kotlini. Tous droits réservés</div>
     </footer>
   </div>
 </body>
