--- a/ide.html
+++ b/ide.html
@@ -33,7 +33,7 @@
     </main>
 
     <footer class="py-4 px-6 bg-blue-900 text-white">
-      <div class="text-center font-semibold">&copy; 2023 Yaml Translator. Tous droits réservés</div>
+      <div class="text-center font-semibold">&copy; 2023 Kotlini. Tous droits réservés</div>
     </footer>
   </div>
 
