--- a/translate.html
+++ b/translate.html
@@ -174,6 +174,6 @@
   </div>
 
   <script src="js/drag-and-drop.js"></script>
-  <script src="js/openia.js"></script>
+  <script src="js/open-ia.js"></script>
 </body>
 </html>
